# gui

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  nutra.desktop  nutra.desktop.in  resources.qrc
.github/workflows/: arch.yml.disabled  ci-full.yml  macos.yml  release.yml  ubuntu-20.04.yml  ubuntu-22.04.yml  ubuntu-24.04.yml  version-bump.yml  windows.yml
docs/: todo.md
include/: mainwindow.h
include/db/: databasemanager.h  foodrepository.h  mealrepository.h  reciperepository.h
include/utils/: pythonservicemanager.h  string_utils.h
include/widgets/: dailylogwidget.h  detailswidget.h  mealwidget.h  preferencesdialog.h  profilesettingswidget.h  rdasettingswidget.h  recipewidget.h  searchwidget.h  weightinputdialog.h
resources/: nutra.desktop.in
scripts/: build_appimage.sh  ci-version-bump.sh
src/: main.cpp  mainwindow.cpp
src/db/: databasemanager.cpp  foodrepository.cpp  mealrepository.cpp  reciperepository.cpp
src/utils/: pythonservicemanager.cpp  string_utils.cpp
src/widgets/: dailylogwidget.cpp  detailswidget.cpp  mealwidget.cpp  preferencesdialog.cpp  profilesettingswidget.cpp  rdasettingswidget.cpp  recipewidget.cpp  searchwidget.cpp  weightinputdialog.cpp
tests/: test_calculations.cpp  test_calculations.h  test_databasemanager.cpp  test_databasemanager.h  test_foodrepository.cpp  test_reciperepository.cpp
